--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Clock</title>
+    <title> Clock </title>
 </head>
 
 <body>
-    <div id="clock">12:13:14</div>
+    <div id="clock"> 12: 13: 14 </div>
+    <script src="clock.js"></script>
 </body>
 
 </html>
