--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="clock"> 12: 13: 14 </div>
-    <script src="clock.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
